--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body style="background-color: black">
+
+<body style="background-color: black;box-sizing: border-box;overflow-x: hidden;">
   <app-root></app-root>
 </body>
 
