Changed scroll bar style and background color

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body style="background-color: black;box-sizing: border-box;overflow-x: hidden;">
+<body style="background-color: #131F2B ;box-sizing: border-box;overflow-x: hidden;">
   <app-root></app-root>
 </body>
 
